dev-cluster/apps/homebrain-frontend/deployment.yaml
# deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: homebrain-frontend
  namespace: homebrain
spec:
  replicas: 0
  selector:
    matchLabels:
      app: homebrain-frontend
  template:
    metadata:
      labels:
        app: homebrain-frontend
    spec:
      containers:
        - name: frontend
          image: ghcr.io/pukar10/homebrain-frontend:latest
          ports:
            - containerPort: 80
