dev-cluster/apps/homebrain-frontend/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: homebrain-ui
  namespace: homebrain
spec:
  selector:
    app: homebrain-ui
  ports:
    - port: 80
      targetPort: 80
