dev-cluster/apps/homebrain-frontend/httproute.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: homebrain-UI
  namespace: homebrain
spec:
  parentRefs:
    - name: shared-gateway
      namespace: gateway-system
  hostnames:
    - homebrain.pukarsubedi.com
  rules:
    - matches:
        - path:
            type: PathPrefix
            value: /
      backendRefs:
        - name: homebrain-frontend
          port: 80
